#1: Flashlight can be disabled.